syntax = "proto3";

package types.v1;

option go_package = "types/v1;typesv1";

import "google/protobuf/timestamp.proto";

message Session {
  int64 environment_id = 1;
  int64 machine_id = 2;
  int64 session_id = 3;
  int64 log_event_count = 4;
  int64 log_event_size_bytes = 5;
  google.protobuf.Timestamp started_at = 6;
  google.protobuf.Timestamp finished_at = 7;
}
